--- a/less/cascade.less
+++ b/less/cascade.less
@@ -28,14 +28,15 @@
 @import url("pure-min.less");
 @import url("fonts.less");
 
+/O #5e72e4*/
 
 :root {
-  --primary: #5e72e4;
-  --dark-primary: #483d8b;
+  --primary: #542580;
+  --dark-primary: #542580;
   --main-color: #09c;
   --header-bg: #09c;
   --header-color: #fff;
-  --bar-bg: #5e72e4;
+  --bar-bg: #542580;
   --menu-bg-color: #fff;
   --menu-color: #5f6368;
   --menu-color-hover: #202124;
@@ -125,7 +126,7 @@ textarea {
 }
 
 ::selection {
-  background-color: #5e72e4;
+  background-color: #542580;
   background-color: var(--primary);
   color: #ffffff;
   color: var(--white);
@@ -138,7 +139,7 @@ textarea {
 a:link,
 a:visited,
 a:active {
-  color: #5e72e4;
+  color: #542580;
   color: var(--primary);
   text-decoration: none;
 }
@@ -318,7 +319,7 @@ select,
 select:not([multiple="multiple"]):focus,
 input:not(.cbi-button):focus,
 .cbi-dropdown:focus {
-  border-color: #5e72e4;
+  border-color: #542580;
   border-color: var(--primary);
   box-shadow: 0 3px 9px rgba(50, 50, 9, 0), 3px 4px 8px rgba(94, 114, 228, .1);
 }
@@ -344,7 +345,7 @@ code {
 abbr {
   cursor: help;
   text-decoration: underline;
-  color: #5e72e4;
+  color: #542580;
   color: var(--primary);
 }
 
@@ -588,7 +589,7 @@ h5 {
             width: 100%;
             height: 1px;
             bottom: 0;
-            border-bottom: 1px #5e72e4 solid;
+            border-bottom: 1px #542580 solid;
             border-bottom: 1px var(--primary) solid;
             transform: scaleX(0);
             transition: transform 0.3s;
@@ -646,7 +647,7 @@ h5 {
         width: 100%;
         cursor: pointer;
         min-height: 50px;
-        background-color: #5e72e4 !important;
+        background-color: #542580 !important;
         background-color: var(--primary) !important;
         border-radius: 6px;
         outline: none;
@@ -755,7 +756,7 @@ small {
     .brand {
       display: block;
       font-size: 1.8rem;
-      color: #5e72e4;
+      color: #542580;
       color: var(--primary);
       font-family: "TypoGraphica";
       text-decoration: none;
@@ -851,7 +852,7 @@ header {
   position: relative;
 
   &.bg-primary {
-    background-color: #5e72e4 !important;
+    background-color: #542580 !important;
     background-color: var(--primary) !important;
   }
 
@@ -860,7 +861,7 @@ header {
     position: absolute;
     height: 2rem;
     width: 100%;
-    background-color: #5e72e4 !important;
+    background-color: #542580 !important;
     background-color: var(--primary) !important;
   }
 
@@ -1058,7 +1059,7 @@ div[style="width:100%;height:300px;border:1px solid #000;background:#fff"] {
 
         &.active {
           color: #fff;
-          background: #5e72e4;
+          background: #542580;
           background: var(--primary);
 
           &::before {
@@ -1074,7 +1075,7 @@ div[style="width:100%;height:300px;border:1px solid #000;background:#fff"] {
         &:hover {
           cursor: pointer;
           color: #fff;
-          background: #5e72e4;
+          background: #542580;
           background: var(--primary);
 
           &::before {
@@ -1096,7 +1097,7 @@ div[style="width:100%;height:300px;border:1px solid #000;background:#fff"] {
           padding-top: 3px;
           transition: all 0.3s;
           content: "\e915";
-          color: #5e72e4;
+          color: #542580;
           color: var(--primary);
         }
       }
@@ -1157,7 +1158,7 @@ div[style="width:100%;height:300px;border:1px solid #000;background:#fff"] {
                 bottom: 0;
                 width: 0;
                 height: 2px;
-                background-color: #5e72e4;
+                background-color: #542580;
                 background-color: var(--primary);
                 transition: all 0.2s;
               }
@@ -1188,7 +1189,7 @@ div[style="width:100%;height:300px;border:1px solid #000;background:#fff"] {
                 bottom: 0;
                 width: 100%;
                 height: 2px;
-                background-color: #5e72e4;
+                background-color: #542580;
                 background-color: var(--primary);
                 transition: all 0.2s;
               }
@@ -1220,7 +1221,7 @@ div[style="width:100%;height:300px;border:1px solid #000;background:#fff"] {
 
           &.active {
             color: #fff;
-            background: #5e72e4;
+            background: #542580;
             background: var(--primary);
 
             &::before {
@@ -1236,7 +1237,7 @@ div[style="width:100%;height:300px;border:1px solid #000;background:#fff"] {
           &:hover {
             cursor: pointer;
             color: #fff;
-            background: #5e72e4;
+            background: #542580;
             background: var(--primary);
 
             &::before {
@@ -1258,7 +1259,7 @@ div[style="width:100%;height:300px;border:1px solid #000;background:#fff"] {
             padding-top: 3px;
             transition: all 0.3s;
             content: "\e915";
-            color: #5e72e4;
+            color: #542580;
             color: var(--primary);
           }
 
@@ -1286,59 +1287,59 @@ div[style="width:100%;height:300px;border:1px solid #000;background:#fff"] {
 
         .menu[data-title=Status]:before {
           content: "\e906";
-          color: #5e72e4;
+          color: #542580;
           color: var(--primary);
         }
 
         .menu[data-title=System]:before {
           content: "\e90a";
-          color: #fb6340;
+          color: #fdb926;
         }
 
         .menu[data-title=Services]:before {
           content: "\e909";
-          color: #11cdef;
+          color: #fdb926;
         }
 
         .menu[data-title=NAS]:before {
           content: "\e90c";
-          color: #f3a4b5;
+          color: #fdb926;
         }
 
         .menu[data-title=VPN]:before {
           content: "\e90b";
-          color: #8965e0;
+          color: #fdb926;
         }
 
         .menu[data-title=Network]:before {
           content: "\e908";
-          color: #8965e0;
+          color: #fdb926;
         }
 
         .menu[data-title=Bandwidth_Monitor]:before {
           content: "\e90d";
-          color: #2dce89;
+          color: #fdb926;
         }
 
         .menu[data-title=Docker]:before {
           content: "\e911";
-          color: #6699ff;
+          color: #fdb926;
         }
 
         .menu[data-title=Statistics]:before {
           content: "\e913";
-          color: #8965e0;
+          color: #fdb926;
         }
 
         .menu[data-title=Control]:before {
           content: "\e912";
-          color: #5e72e4;
+          color: #fdb926;
           color: var(--primary);
         }
 
         .menu[data-title=Asterisk]:before {
           content: "\e914";
-          color: #fb6340;
+          color: #fdb926;
         }
 
         a[data-title=Log_out],
@@ -1837,9 +1838,9 @@ td > table > tbody > tr > td,
 .cbi-button-neutral[onclick="handleConfig(event)"] {
   font-weight: normal;
   color: #fff !important;
-  border: thin solid #5e72e4;
+  border: thin solid #542580;
   border: thin solid var(--primary);
-  background-color: #5e72e4;
+  background-color: #542580;
   background-color: var(--primary);;
 }
 
@@ -1856,10 +1857,10 @@ td > table > tbody > tr > td,
 .cbi-button[onclick="addKey(event)"] {
   font-weight: normal;
   color: #fff !important;
-  border: thin solid #5e72e4;
+  border: thin solid #542580;
   border: thin solid var(--primary);
 
-  background-color: #5e72e4;
+  background-color: #542580;
   background-color: var(--primary);
 }
 
@@ -1944,16 +1945,16 @@ td > table > tbody > tr > td,
   li[class~="active"],
   li:hover {
     cursor: pointer;
-    border-bottom: 0.18751rem solid #5e72e4;
+    border-bottom: 0.18751rem solid #542580;
     border-bottom: 0.18751rem solid var(--primary);
-    color: #5e72e4;
+    color: #542580;
     color: var(--primary);
     background-color: #e4e9ee;
     margin-bottom: 0;
     border-radius: 0;
 
     a {
-      color: #5e72e4;
+      color: #542580;
       color: var(--primary);
     }
   }
@@ -1973,7 +1974,7 @@ td > table > tbody > tr > td,
     }
 
     &:hover {
-      border-bottom: 0.18751rem solid #5e72e4;
+      border-bottom: 0.18751rem solid #542580;
       border-bottom: 0.18751rem solid var(--primary);
     }
   }
@@ -2017,9 +2018,9 @@ td > table > tbody > tr > td,
 
     &:hover {
       cursor: pointer;
-      border-bottom: 0.18751rem solid #5e72e4;
+      border-bottom: 0.18751rem solid #542580;
       border-bottom: 0.18751rem solid var(--primary);
-      color: #5e72e4;
+      color: #542580;
       color: var(--primary);
       background-color: #e4e9ee;
       margin-bottom: 0;
@@ -2031,15 +2032,15 @@ td > table > tbody > tr > td,
   }
 
   li[class~="cbi-tab"] {
-    border-bottom: 0.18751rem solid #5e72e4;
+    border-bottom: 0.18751rem solid #542580;
     border-bottom: 0.18751rem solid var(--primary);
-    color: #5e72e4;
+    color: #542580;
     color: var(--primary);
     background-color: #e4e9ee;
     margin-bottom: 0;
 
     a {
-      color: #5e72e4;
+      color: #542580;
       color: var(--primary);
     }
   }
@@ -3178,7 +3179,7 @@ td > .ifacebadge,
 }
 
 .ifacebox-head.active {
-  background: #5e72e4;
+  background: #542580;
   background: var(--primary);
 
   * {
@@ -3941,10 +3942,10 @@ input[type="checkbox"] {
 }
 
 input[type="checkbox"]:checked {
-  border: 1px solid #5e72e4;
+  border: 1px solid #542580;
   border: 1px solid var(--primary);
   background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 8 8\'%3e%3cpath fill=\'%23fff\' d=\'M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z\'/%3e%3c/svg%3e') !important;
-  background-color: #5e72e4;
+  background-color: #542580;
   background-color: var(--primary);
   background-size: 70%;
   background-repeat: no-repeat;
