--- a/htdocs/luci-static/argon/css/cascade.css
+++ b/htdocs/luci-static/argon/css/cascade.css
@@ -36,8 +36,8 @@
 @import url("pure-min.css?v=1");
 :root {
   /** general **/
-  --primary: #5e72e4;
-  --dark-primary: #483d8b;
+  --primary: #542580;
+  --dark-primary: #542580;
   --background-color: #f4f5f7;
   --font-color: #525f7f;
   /** login form **/
@@ -81,8 +81,8 @@
   --font-family-normal: Open Sans, PingFangSC-Regular, Microsoft Yahei, WenQuanYi Micro Hei, "Helvetica Neue", Helvetica, Hiragino Sans GB, sans-serif;
 }
 [data-theme="dark"] {
-  --primary: #483d8b;
-  --dark-primary: #483d8b;
+  --primary: #542580;
+  --dark-primary: #542580;
   --background-color: #1e1e1e;
   --font-color: #cccccc;
   --darker: black;
@@ -150,7 +150,7 @@ body {
   -webkit-tap-highlight-color: transparent;
 }
 ::selection {
-  background-color: #5e72e4;
+  background-color: #542580;
   background-color: var(--primary);
   color: #ffffff;
   color: var(--white);
@@ -370,7 +370,7 @@ li {
   width: 100%;
   height: 1px;
   bottom: 0;
-  border-bottom: 1px #5e72e4 solid;
+  border-bottom: 1px #542580 solid;
   border-bottom: 1px var(--primary) solid;
   transform: scaleX(0);
   transition: transform 0.3s;
@@ -419,7 +419,7 @@ li {
   width: 100%;
   cursor: pointer;
   min-height: 50px;
-  background-color: #5e72e4 !important;
+  background-color: #542580 !important;
   background-color: var(--primary) !important;
   border-radius: 6px;
   outline: none;
@@ -500,11 +500,11 @@ header::after {
   position: absolute;
   height: 2rem;
   width: 100%;
-  background-color: #5e72e4 !important;
+  background-color: #542580 !important;
   background-color: var(--primary) !important;
 }
 header.bg-primary {
-  background-color: #5e72e4 !important;
+  background-color: #542580 !important;
   background-color: var(--primary) !important;
 }
 header .fill {
@@ -595,7 +595,7 @@ footer a {
 }
 .main .main-left .sidenav-header .brand {
   font-size: 1.8rem;
-  color: #5e72e4;
+  color: #542580;
   color: var(--primary);
   font-family: "TypoGraphica", sans-serif;
   text-decoration: none;
@@ -646,7 +646,7 @@ footer a {
   height: 2px;
   left: 0;
   bottom: 0;
-  background-color: #5e72e4;
+  background-color: #542580;
   background-color: var(--primary);
   transition: all 0.2s;
 }
@@ -679,7 +679,7 @@ footer a {
   position: absolute;
   left: 0.8rem;
   content: "\e915";
-  color: #5e72e4;
+  color: #542580;
   color: var(--primary);
 }
 .main .main-left .nav li.slide .menu::after {
@@ -705,7 +705,7 @@ footer a {
 .main .main-left .nav li.slide .menu.active {
   cursor: pointer;
   color: #fff;
-  background: #5e72e4;
+  background: #542580;
   background: var(--primary);
   box-shadow: 0 0 1px #ccc;
 }
@@ -731,49 +731,49 @@ footer a {
 }
 .main .main-left .nav li.slide .menu[data-title=Status]:before {
   content: "\e906";
-  color: #5e72e4;
+  color: #542580;
   color: var(--primary);
 }
 .main .main-left .nav li.slide .menu[data-title=System]:before {
   content: "\e90a";
-  color: #fb6340;
+  color: #fdb926;
 }
 .main .main-left .nav li.slide .menu[data-title=Services]:before {
   content: "\e909";
-  color: #11cdef;
+  color: #fdb926;
 }
 .main .main-left .nav li.slide .menu[data-title=NAS]:before {
   content: "\e90c";
-  color: #f3a4b5;
+  color: #fdb926;
 }
 .main .main-left .nav li.slide .menu[data-title=VPN]:before {
   content: "\e90b";
-  color: #aaad03;
+  color: #fdb926;
 }
 .main .main-left .nav li.slide .menu[data-title=Network]:before {
   content: "\e908";
-  color: #8965e0;
+  color: ##fdb926;
 }
 .main .main-left .nav li.slide .menu[data-title=Bandwidth_Monitor]:before {
   content: "\e90d";
-  color: #2dce89;
+  color: #fdb926;
 }
 .main .main-left .nav li.slide .menu[data-title=Docker]:before {
   content: "\e911";
-  color: #6699ff;
+  color: #fdb926;
 }
 .main .main-left .nav li.slide .menu[data-title=Statistics]:before {
   content: "\e913";
-  color: #5603ad;
+  color: #fdb926;
 }
 .main .main-left .nav li.slide .menu[data-title=Control]:before {
   content: "\e912";
-  color: #5e72e4;
+  color: #fdb926;
   color: var(--primary);
 }
 .main .main-left .nav li.slide .menu[data-title=Asterisk]:before {
   content: "\e914";
-  color: #fb6340;
+  color: #fdb926;
 }
 .main .main-left .nav li.slide .menu[data-title=Logout]:before {
   content: "\e907";
@@ -796,7 +796,7 @@ footer a {
   height: 2px;
   left: 0;
   bottom: 0;
-  background-color: #5e72e4;
+  background-color: #542580;
   background-color: var(--primary);
   transition: all 0.2s;
   box-shadow: 0 0 1px #ccc;
@@ -875,7 +875,7 @@ footer a {
   display: block;
   text-align: center;
   margin-top: 2rem;
-  color: #5e72e4;
+  color: #542580;
   color: var(--primary);
   font-size: 2rem;
 }
@@ -961,9 +961,9 @@ form.inline + form.inline,
 .cbi-button-apply,
 .cbi-button-edit {
   color: #fff !important;
-  background-color: #5e72e4 !important;
+  background-color: #542580 !important;
   background-color: var(--primary) !important;
-  border-color: #5e72e4 !important;
+  border-color: #542580 !important;
   border-color: var(--primary) !important;
 }
 .node-services-vssr .ssr-button {
@@ -1133,7 +1133,7 @@ input[type="checkbox"] {
 }
 input[type="checkbox"]:checked {
   background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 8 8\'%3e%3cpath fill=\'%23fff\' d=\'M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z\'/%3e%3c/svg%3e') !important;
-  background-color: #5e72e4;
+  background-color: #542580;
   background-color: var(--primary);
   background-size: 70%;
   background-repeat: no-repeat;
@@ -1157,7 +1157,7 @@ ul li .cbi-input-checkbox {
 }
 .cbi-input-radio:checked {
   background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'-4 -4 8 8\'%3e%3ccircle r=\'3\' fill=\'%23fff\'/%3e%3c/svg%3e') !important;
-  background-color: #5e72e4;
+  background-color: #542580;
   background-color: var(--primary);
   background-size: 70%;
   background-repeat: no-repeat;
@@ -1279,7 +1279,7 @@ small {
   min-width: 0;
   padding: 0.2rem 0.6rem;
   font-size: 1.2rem;
-  color: #5e72e4 !important;
+  color: #542580 !important;
   color: var(--primary) !important;
 }
 .cbi-optionals {
@@ -1416,7 +1416,7 @@ input[name="nslookup"] {
 #conns > div > div,
 #memtotal > div > div {
   height: 100% !important;
-  background-color: #5e72e4 !important;
+  background-color: #542580 !important;
   background-color: var(--primary) !important;
   background-image: url(../img/trafficbar.png);
   background-position: left top;
@@ -1833,7 +1833,7 @@ input {
 select:not([multiple="multiple"]):hover,
 input:hover,
 input:focus {
-  border-color: #5e72e4;
+  border-color: #542580;
   border-color: var(--primary);
   outline: 0;
   background-color: #fff;
@@ -1993,7 +1993,7 @@ div > .table > .tbody > .tr:nth-of-type(2n) {
   animation: warning-background-color-breathe 1.5s ease-in-out infinite !important;
 }
 .notice {
-  background-color: #5e72e4 !important;
+  background-color: #542580 !important;
   background-color: var(--primary) !important;
   color: #fff !important;
 }
@@ -2199,9 +2199,9 @@ div::-webkit-scrollbar {
 .tabs li[class~="active"],
 .tabs li:hover {
   cursor: pointer;
-  border-bottom: 0.18751rem solid #5e72e4;
+  border-bottom: 0.18751rem solid #542580;
   border-bottom: 0.18751rem solid var(--primary);
-  color: #5e72e4;
+  color: #542580;
   color: var(--primary);
   background-color: var(--light-subtabs-background);
   margin-bottom: 0;
@@ -2209,7 +2209,7 @@ div::-webkit-scrollbar {
 }
 .tabs li[class~="active"] a,
 .tabs li:hover a {
-  color: #5e72e4;
+  color: #542580;
   color: var(--primary);
 }
 .tabs li {
@@ -2224,7 +2224,7 @@ div::-webkit-scrollbar {
   padding: 0.5rem 0.8rem;
 }
 .tabs li:hover {
-  border-bottom: 0.18751rem solid #5e72e4;
+  border-bottom: 0.18751rem solid #542580;
   border-bottom: 0.18751rem solid var(--primary);
 }
 .cbi-tabmenu {
@@ -2266,9 +2266,9 @@ div::-webkit-scrollbar {
 }
 .cbi-tabmenu li:hover {
   cursor: pointer;
-  border-bottom: 0.18751rem solid #5e72e4;
+  border-bottom: 0.18751rem solid #542580;
   border-bottom: 0.18751rem solid var(--primary);
-  color: #5e72e4;
+  color: #542580;
   color: var(--primary);
   background-color: var(--light-subtabs-background);
   margin-bottom: 0;
@@ -2277,14 +2277,14 @@ div::-webkit-scrollbar {
   color: #525f7f;
 }
 .cbi-tabmenu li[class~="cbi-tab"] {
-  border-bottom: 0.18751rem solid #5e72e4;
+  border-bottom: 0.18751rem solid #542580;
   border-bottom: 0.18751rem solid var(--primary);
   color: var(--primary);
   background-color: var(--light-subtabs-background);
   margin-bottom: 0;
 }
 .cbi-tabmenu li[class~="cbi-tab"] a {
-  color: #5e72e4;
+  color: #542580;
   color: var(--primary);
 }
 .cbi-tab-descr {
@@ -2381,13 +2381,13 @@ div::-webkit-scrollbar {
 }
 .cbi-dropdown[open] {
   position: relative;
-  border-color: #5e72e4;
+  border-color: #542580;
   border-color: var(--primary);
 }
 .cbi-dropdown[open] > ul.dropdown {
   display: block;
   background: #fff;
-  border-color: #5e72e4;
+  border-color: #542580;
   border-color: var(--primary);
   position: absolute;
   z-index: 1000;
@@ -2684,7 +2684,7 @@ td > .ifacebadge,
   background: #eee;
 }
 .ifacebox-head.active {
-  background: #5e72e4;
+  background: #542580;
   background: var(--primary);
   color: #fff;
 }
@@ -2848,7 +2848,7 @@ input[name="nslookup"] {
 }
 .node-system-packages > .main .cbi-section-node:first-child .cbi-value-last div[style="margin:3px 0; width:300px; height:10px; border:1px solid #000000; background-color:#80C080"] div {
   border-right: 0 !important;
-  background-color: #5e72e4 !important;
+  background-color: #542580 !important;
   background-color: var(--primary) !important;
   height: 100% !important;
   background-image: url(../img/trafficbar.png);
@@ -2961,7 +2961,7 @@ input[name="nslookup"] {
   background: #fffffff0;
 }
 #cbi-passwall .cbi-section-table tbody ._now_use {
-  background: #5e72e473 !important;
+  background: #54258073 !important;
 }
 /* luci-app-commands */
 .commandbox h3 {
