--- a/htdocs/luci-static/argon/css/cascade.css
+++ b/htdocs/luci-static/argon/css/cascade.css
@@ -49,7 +49,7 @@
   --menubar-background: #fff;
   --menubar-scrollbar-thumb: #eee;
   --menubar-text-color: #4c4c4c;
-  --blue: #5e72e4;
+  --blue: #542580;
   --indigo: #5603ad;
   --purple: #8965e0;
   --pink: #f3a4b5;
@@ -92,7 +92,7 @@
   --menubar-background: #fff;
   --menubar-scrollbar-thumb: #f6f9fc;
   --menubar-text-color: #4c4c4c;
-  --blue: #5e72e4;
+  --blue: #542580;
   --indigo: #5603ad;
   --purple: #8965e0;
   --pink: #f3a4b5;
