--- a/htdocs/luci-static/argon/less/cascade.less
+++ b/htdocs/luci-static/argon/less/cascade.less
@@ -40,8 +40,8 @@
 
 :root {
     /** general **/
-    --primary: #5e72e4;
-    --dark-primary: #483d8b;
+    --primary: #542580;
+    --dark-primary: #542580;
     --background-color: #f4f5f7;
     --font-color: #525f7f;
     /** login form **/
@@ -59,7 +59,7 @@
     --menubar-background: #fff;
     --menubar-scrollbar-thumb: #eee;
     --menubar-text-color: #4c4c4c;
-    --blue: #5e72e4;
+    --blue: #542580;
     --indigo: #5603ad;
     --purple: #8965e0;
     --pink: #f3a4b5;
@@ -106,7 +106,7 @@
     --menubar-background: #fff;
     --menubar-scrollbar-thumb: #f6f9fc;
     --menubar-text-color: #4c4c4c;
-    --blue: #5e72e4;
+    --blue: #542580;
     --indigo: #5603ad;
     --purple: #8965e0;
     --pink: #f3a4b5;
@@ -172,7 +172,7 @@ body {
 }
 
 ::selection {
-    background-color: #5e72e4;
+    background-color: #542580;
     background-color: var(--primary);
     color: #ffffff;
     color: var(--white);
@@ -422,7 +422,7 @@ li {
                         width: 100%;
                         height: 1px;
                         bottom: 0;
-                        border-bottom: 1px #5e72e4 solid;
+                        border-bottom: 1px #542580 solid;
                         border-bottom: 1px var(--primary) solid;
                         transform: scaleX(0);
                         transition: transform 0.3s;
@@ -480,7 +480,7 @@ li {
                 width: 100%;
                 cursor: pointer;
                 min-height: 50px;
-                background-color: #5e72e4 !important;
+                background-color: #542580 !important;
                 background-color: var(--primary) !important;
                 border-radius: 6px;
                 outline: none;
@@ -583,12 +583,12 @@ header {
         position: absolute;
         height: 2rem;
         width: 100%;
-        background-color: #5e72e4 !important;
+        background-color: #542580 !important;
         background-color: var(--primary) !important;
     }
 
     &.bg-primary {
-        background-color: #5e72e4 !important;
+        background-color: #542580 !important;
         background-color: var(--primary) !important;
     }
 
@@ -701,7 +701,7 @@ footer {
 
             .brand {
                 font-size: 1.8rem;
-                color: #5e72e4;
+                color: #542580;
                 color: var(--primary);
                 font-family: "TypoGraphica", sans-serif;
                 text-decoration: none;
@@ -759,7 +759,7 @@ footer {
                                     height: 2px;
                                     left: 0;
                                     bottom: 0;
-                                    background-color: #5e72e4;
+                                    background-color: #542580;
                                     background-color: var(--primary);
                                     transition: all 0.2s;
                                 }
@@ -799,7 +799,7 @@ footer {
                             position: absolute;
                             left: 0.8rem;
                             content: "\e915";
-                            color: #5e72e4;
+                            color: #542580;
                             color: var(--primary);
                         }
 
@@ -829,7 +829,7 @@ footer {
                         &.active {
                             cursor: pointer;
                             color: #fff;
-                            background: #5e72e4;
+                            background: #542580;
                             background: var(--primary);
                             box-shadow: 0 0 1px #ccc;
 
@@ -863,7 +863,7 @@ footer {
 
                     .menu[data-title=Status]:before {
                         content: "\e906";
-                        color: #5e72e4;
+                        color: #542580;
                         color: var(--primary);
                     }
 
@@ -909,7 +909,7 @@ footer {
 
                     .menu[data-title=Control]:before {
                         content: "\e912";
-                        color: #5e72e4;
+                        color: #542580;
                         color: var(--primary);
                     }
 
@@ -943,7 +943,7 @@ footer {
                                     height: 2px;
                                     left: 0;
                                     bottom: 0;
-                                    background-color: #5e72e4;
+                                    background-color: #542580;
                                     background-color: var(--primary);
                                     transition: all 0.2s;
                                     box-shadow: 0 0 1px #ccc;
@@ -1042,7 +1042,7 @@ footer {
             display: block;
             text-align: center;
             margin-top: 2rem;
-            color: #5e72e4;
+            color: #542580;
             color: var(--primary);
             font-size: 2rem;
 
@@ -1149,9 +1149,9 @@ form.inline+form.inline,
 .cbi-button-edit {
 
     color: #fff !important;
-    background-color: #5e72e4 !important;
+    background-color: #542580 !important;
     background-color: var(--primary) !important;
-    border-color: #5e72e4 !important;
+    border-color: #542580 !important;
     border-color: var(--primary) !important;
 }
 
@@ -1350,7 +1350,7 @@ input[type="checkbox"] {
 
 input[type="checkbox"]:checked {
     background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 8 8\'%3e%3cpath fill=\'%23fff\' d=\'M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z\'/%3e%3c/svg%3e') !important;
-    background-color: #5e72e4;
+    background-color: #542580;
     background-color: var(--primary);
     background-size: 70%;
     background-repeat: no-repeat;
@@ -1378,7 +1378,7 @@ ul li .cbi-input-checkbox {
 
 .cbi-input-radio:checked {
     background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'-4 -4 8 8\'%3e%3ccircle r=\'3\' fill=\'%23fff\'/%3e%3c/svg%3e') !important;
-    background-color: #5e72e4;
+    background-color: #542580;
     background-color: var(--primary);
     background-size: 70%;
     background-repeat: no-repeat;
@@ -1523,7 +1523,7 @@ small {
     min-width: 0;
     padding: 0.2rem 0.6rem;
     font-size: 1.2rem;
-    color: #5e72e4 !important;
+    color: #542580 !important;
     color: var(--primary) !important;
 }
 
@@ -1685,7 +1685,7 @@ input[name="nslookup"] {
 #conns>div>div,
 #memtotal>div>div {
     height: 100% !important;
-    background-color: #5e72e4 !important;
+    background-color: #542580 !important;
     background-color: var(--primary) !important;
     background-image: url(../img/trafficbar.png);
     background-position: left top;
@@ -2207,7 +2207,7 @@ input {
 select:not([multiple="multiple"]):hover,
 input:hover,
 input:focus {
-    border-color: #5e72e4;
+    border-color: #542580;
     border-color: var(--primary);
     outline: 0;
     background-color: #fff;
@@ -2402,7 +2402,7 @@ div>.table>.tbody>.tr:nth-of-type(2n) {
 }
 
 .notice {
-    background-color: #5e72e4 !important;
+    background-color: #542580 !important;
     background-color: var(--primary) !important;
     color: #fff !important;
 }
@@ -2660,16 +2660,16 @@ td>table>tbody>tr>td {
     li[class~="active"],
     li:hover {
         cursor: pointer;
-        border-bottom: 0.18751rem solid #5e72e4;
+        border-bottom: 0.18751rem solid #542580;
         border-bottom: 0.18751rem solid var(--primary);
-        color: #5e72e4;
+        color: #542580;
         color: var(--primary);
         background-color: var(--light-subtabs-background);
         margin-bottom: 0;
         border-radius: 0;
 
         a {
-            color: #5e72e4;
+            color: #542580;
             color: var(--primary);
         }
     }
@@ -2687,7 +2687,7 @@ td>table>tbody>tr>td {
         }
 
         &:hover {
-            border-bottom: 0.18751rem solid #5e72e4;
+            border-bottom: 0.18751rem solid #542580;
             border-bottom: 0.18751rem solid var(--primary);
         }
     }
@@ -2746,9 +2746,9 @@ div::-webkit-scrollbar {
 
         &:hover {
             cursor: pointer;
-            border-bottom: 0.18751rem solid #5e72e4;
+            border-bottom: 0.18751rem solid #542580;
             border-bottom: 0.18751rem solid var(--primary);
-            color: #5e72e4;
+            color: #542580;
             color: var(--primary);
             background-color: var(--light-subtabs-background);
             margin-bottom: 0;
@@ -2760,14 +2760,14 @@ div::-webkit-scrollbar {
     }
 
     li[class~="cbi-tab"] {
-        border-bottom: 0.18751rem solid #5e72e4;
+        border-bottom: 0.18751rem solid #542580;
         border-bottom: 0.18751rem solid var(--primary);
         color: var(--primary);
         background-color: var(--light-subtabs-background);
         margin-bottom: 0;
 
         a {
-            color: #5e72e4;
+            color: #542580;
             color: var(--primary);
         }
     }
@@ -2884,14 +2884,14 @@ div::-webkit-scrollbar {
 
 .cbi-dropdown[open] {
     position: relative;
-    border-color: #5e72e4;
+    border-color: #542580;
     border-color: var(--primary);
 }
 
 .cbi-dropdown[open]>ul.dropdown {
     display: block;
     background: #fff;
-    border-color: #5e72e4;
+    border-color: #542580;
     border-color: var(--primary);
     position: absolute;
     z-index: 1000;
@@ -3268,7 +3268,7 @@ td>.ifacebadge,
 }
 
 .ifacebox-head.active {
-    background: #5e72e4;
+    background: #542580;
     background: var(--primary);
     color: #fff;
 }
@@ -3483,7 +3483,7 @@ input[name="nslookup"] {
 
         div {
             border-right: 0 !important;
-            background-color: #5e72e4 !important;
+            background-color: #542580 !important;
             background-color: var(--primary) !important;
             height: 100% !important;
             background-image: url(../img/trafficbar.png);
