--- a/less/dark.less
+++ b/less/dark.less
@@ -347,7 +347,7 @@ h4 {
 }
 
 abbr {
-    color: #5e72e4;
+    color: #542580;
 }
 
 div > table > tbody > tr:nth-of-type(2n),
@@ -454,7 +454,7 @@ input:focus {
 select:not([multiple="multiple"]):focus,
 input:not(.cbi-button):focus,
 .cbi-dropdown:focus {
-    border-color: #5e72e4;
+    border-color: #542580;
     border-color: var(--dark-primary) !important;
 }
 
@@ -536,7 +536,7 @@ textarea {
 
 div.cbi-value var,
 td.cbi-value-field var {
-    color: #5e72e4;
+    color: #542580;
 }
 
 #diag-rc-output > pre {
