--- a/luasrc/view/themes/argon/footer_login.htm
+++ b/luasrc/view/themes/argon/footer_login.htm
@@ -1,3 +1,10 @@
+<!--
+ * @Author: 喵二
+ * @Date: 2024-01-07 11:10:50
+ * @LastEditors: 喵二
+ * @LastEditTime: 2024-04-11 19:59:32
+ * @FilePath: \luci-theme-manba\luasrc\view\themes\argon\footer_login.htm
+-->
 <%#
 	Argon is a clean HTML5 theme for LuCI. It is based on luci-theme-material Argon Template
 
@@ -21,7 +28,7 @@
 <footer>
 	<div>
 		<a class="luci-link" href="https://github.com/openwrt/luci" target="_blank">Powered by <%= ver.luciname %> (<%= ver.luciversion %>)</a> /
-						<a href="https://github.com/jerrykuku/luci-theme-argon" target="_blank">ArgonTheme <%# vPKG_VERSION %></a> /
+						<a href="https://github.com/miaoermua/luci-theme-manba" target="_blank">ManbaTheme <%# vPKG_VERSION %></a> /
 						<%= ver.distversion %>
 	</div>
 </footer>
