--- a/luasrc/view/themes/argon/header.htm
+++ b/luasrc/view/themes/argon/header.htm
@@ -190,7 +190,7 @@
 	-- Custom settings
 	local mode = 'normal'
 	local dark_css = fs.readfile('/www/luci-static/argon/css/dark.css')
-	local bar_color = '#5e72e4'
+	local bar_color = '#542580'
 	local primary, dark_primary, blur_radius, blur_radius_dark, blur_opacity
 	if fs.access('/etc/config/argon') then
 		primary = uci:get_first('argon', 'global', 'primary')
