--- a/less/cascade.less
+++ b/less/cascade.less
@@ -43,7 +43,7 @@
   --main-menu-color: #202124;
   --submenu-bg-hover: #d4d4d4;
   --submenu-bg-hover-active: #09c;
-  --blue: #5e72e4;
+  --blue: #542580;
   --indigo: #5603ad;
   --purple: #8965e0;
   --pink: #f3a4b5;
