--- a/luasrc/view/themes/argon/footer.htm
+++ b/luasrc/view/themes/argon/footer.htm
@@ -1,3 +1,10 @@
+<!--
+ * @Author: 喵二
+ * @Date: 2023-09-02 19:23:06
+ * @LastEditors: 喵二
+ * @LastEditTime: 2024-04-11 19:59:47
+ * @FilePath: \luci-theme-manba\luasrc\view\themes\argon\footer.htm
+-->
 <%#
 	Argon is a clean HTML5 theme for LuCI. It is based on luci-theme-material Argon Template
 
@@ -43,7 +50,7 @@
 	<div class="ftc">
 		<a class="luci-link" href="https://github.com/openwrt/luci" target="_blank">Powered by <%= ver.luciname %>
 			(<%= ver.luciversion %>)</a> /
-		<a href="https://github.com/jerrykuku/luci-theme-argon" target="_blank">ArgonTheme <%# vPKG_VERSION %></a> /
+		<a href="https://github.com/miaoermua/luci-theme-manba" target="_blank">ManbaTheme <%# vPKG_VERSION %></a> /
 		<%= ver.distversion %>
 		<% if #categories > 1 then %>
 		<ul class="breadcrumb pull-right" id="modemenu">
