Update OpenWrt version

--- a/luasrc/view/themes/argon/footer.htm
+++ b/luasrc/view/themes/argon/footer.htm
@@ -21,7 +21,7 @@
 <footer class="mobile-hide">
 	<div>
 		<a class="luci-link" href="https://github.com/openwrt/luci" target="_blank">Powered by <%= ver.luciname %> (<%= ver.luciversion %>)</a> /
-						<a href="https://github.com/jerrykuku/luci-theme-argon" target="_blank">ArgonTheme <%# vPKG_VERSION %></a> /
+						<a href="https://github.com/miaoermua/luci-theme-manba" target="_blank">ManbaTheme <%# vPKG_VERSION %></a> /
 						<%= ver.distversion %>
 		<ul class="breadcrumb pull-right" id="modemenu" style="display:none"></ul>
 	</div>
